--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
+    "caniuse-lite": "^1.0.30001427",
     "expo": "^45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-asset": "~8.5.0",
